--- a/src/components/navbar/Menu.css
+++ b/src/components/navbar/Menu.css
@@ -1,3 +1,4 @@
+/* Estilos para el logo */
 .logo {
   background-size: cover;
   object-fit: cover;
@@ -21,32 +22,14 @@
   }
 }
 
-/* Navbar.css */
+/* Navbar estilos generales */
 .navbar {
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
   background-color: var(--white-color);
-  box-shadow: 0px 2px 8px rgb(201,203,204);
+  box-shadow: 0px 2px 8px rgb(201, 203, 204);
 }
 
-.navbar-brand img {
-  transition: max-width 0.3s ease, max-height 0.3s ease;
-}
-
-.active-link {
-  font-weight: bold;
-}
-
-/* Sticky Navigation */
-.sticky {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-/* Link Animation */
+/* Estilos de los enlaces del menú */
 .navbar-nav li .nav-link {
   color: var(--azulmarino-color);
   transition: all 0.3s ease;
@@ -61,9 +44,103 @@
   color: var(--naranja-color);
 }
 
-/* Dark mode */
+/* Estilo para el modo oscuro junto al menú */
+/* Navbar con el botón de menú */
+.navbar-toggler {
+  margin-right: 10px;
+}
 
-.navbar-dark{
+/* Animación para el desplazamiento del menú */
+@keyframes slideFromRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideFromLeft {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.menu-open {
+  animation: slideFromRight 0.5s ease forwards;
+}
+
+/* Ocultar logo durante el desplazamiento */
+.logo-hidden {
+  opacity: 0;
+}
+
+/* Estilos para el menú de superposición de pantalla completa */
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.8);
+
+  z-index: 1000;
+  display: flex;
+  justify-content: flex-end; /* Alineamos el contenido al lado derecho */
+  align-items: center;
+}
+
+.menu-content {
+  position: relative;
+  background-color: var(--white-color);
+  padding: 20px;
+  width: 90%; /* Ajustamos el ancho del menú al 85% del ancho de la pantalla */
+  max-width: 400px;
+  height: 100%; /* Ajustamos la altura del menú para que ocupe toda la pantalla */
+  box-shadow: -10px 0 15px rgba(0, 0, 0, 0.2); /* Agregamos una sombra para resaltar el deslizamiento */
+}
+
+.menu-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu-list li {
+  margin: 10px 0;
+}
+
+.menu-list li a {
+  color: var(--azulmarino-color);
+  font-size: 18px;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.menu-list li a:hover {
+  color: var(--naranja-color);
+}
+
+.menu-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px; /* Ajustamos la posición a la izquierda */
+  background: none;
+  border: none;
+  color: var(--azulmarino-color);
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.menu-darkmode-btn {
+  margin-top: 20px;
+}
+
+/* Estilos para el modo oscuro */
+.navbar-dark {
   background-color: #0d161c;
   box-shadow: 0 1px 2px rgba(253, 253, 253, 0.1);
 }
@@ -72,10 +149,22 @@
   color: var(--white-color);
 }
 
-/* Styles for link on hover in dark mode */
+/* Styles para el enlace hover en modo oscuro */
 .navbar-dark .navbar-nav .nav-link:hover {
   transform: scale(1.1);
   color: #ffe601;
 }
 
+/* Estilos anteriores */
+/* ... */
 
+/* Add media query for smaller screens (e.g., tablets and mobiles) */
+@media (max-width: 480px) {
+  .navbar {
+    width: 100%;
+  }
+  .navbar-nav li .nav-link:hover {
+    transform: scale(1);
+    color: var(--naranja-color);
+  }
+}
