--- a/src/pages/vermas/Vermas.css
+++ b/src/pages/vermas/Vermas.css
@@ -1,37 +1,25 @@
-/* Vermas.css */
-
-.menu-panel {
-  list-style: none;
-  padding-left: 0;
-}
-
-.menu-panel > li {
-  margin-bottom: 10px;
-}
-
-.menu-button {
-  background-color: #ab0d0da8;
+.tab-button {
+  background: none;
   border: none;
-  padding: 10px;
+  cursor: pointer;
+  color: #0b0b0b;
+  font-size: 18px;
+  padding: 8px;
   width: 100%;
   text-align: left;
-  font-size: 16px;
-  cursor: pointer;
+  outline: none;
+  margin: 2px;
+  background-color: rgb(181, 177, 177);
   border-radius: 5px;
-  transition: background-color 0.2s ease;
+  
 }
 
-.menu-button:hover {
-  background-color: #dc2020;
+.tab-button.active {
+  background-color: #1e90ff;
+  font-weight: bold;
 }
 
-.sub-menu {
-  list-style: none;
+.tab-content {
+  margin-top: 10px;
   padding-left: 20px;
-  margin-top: 5px;
-  display: block;
-}
-
-.sub-menu > li {
-  margin-bottom: 5px;
 }
