--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,14 +19,14 @@ h5 {
     color: #00233F;
 }
 
-.a {
+.al {
     color: #818494;
     font-weight: 500;
     text-decoration: none;
     background-color: transparent;
 }
 
-.a:hover {
+.al:hover {
     color: #007bff;
     text-decoration: none;
 }
