--- a/src/components/navbar/Menu.css
+++ b/src/components/navbar/Menu.css
@@ -24,12 +24,15 @@
 
 /* Navbar estilos generales */
 .navbar {
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  transition: background-color 0.3s ease;
   background-color: var(--white-color);
-  box-shadow: 0px 2px 8px rgb(201, 203, 204);
 }
 
 /* Estilos de los enlaces del menú */
+.contenedor{
+  width: 95%;
+}
+
 .navbar-nav li .nav-link {
   color: var(--azulmarino-color);
   transition: all 0.3s ease;
@@ -40,11 +43,9 @@
 }
 
 .navbar-nav li .nav-link:hover {
-  transform: scale(1.1);
   color: var(--naranja-color);
 }
 
-/* Estilo para el modo oscuro junto al menú */
 /* Navbar con el botón de menú */
 .navbar-toggler {
   margin-right: 10px;
@@ -86,7 +87,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(128, 128, 128, 0.8);
-
   z-index: 1000;
   display: flex;
   justify-content: flex-end; /* Alineamos el contenido al lado derecho */
@@ -141,22 +141,24 @@
 
 /* Estilos para el modo oscuro */
 .navbar-dark {
-  background-color: #0d161c;
-  box-shadow: 0 1px 2px rgba(253, 253, 253, 0.1);
+  background-color: var(--black-color);
+}
+
+.active-link{
+  color: var(--white-color);
+  font-weight: bold;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: var(--white-color);
+  color: #e5e5e5;
+  transition: color 0.4s;
 }
 
 /* Styles para el enlace hover en modo oscuro */
 .navbar-dark .navbar-nav .nav-link:hover {
-  transform: scale(1.1);
-  color: #ffe601;
+  color: #b5bfba;
 }
 
-/* Estilos anteriores */
-/* ... */
 
 /* Add media query for smaller screens (e.g., tablets and mobiles) */
 @media (max-width: 480px) {
