--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -1,68 +1,127 @@
 .containe {
-    margin-left: 30px;
-    margin-right: 30px;
-    padding: 20px;
-    background-color: #f7f7f7;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  h2 {
-    color: var(--enlace-color);
-  }
+  margin-left: 2.5rem;
+  padding: 20px;
+  /* background-color: #f4f4f4; */
+  border: 3px solid #f4f4f4;
+  line-height: 1.6;
+}
 
-  .title-form{
-    color: #ff0000;
+
+/* Add media query for smaller screens (e.g., tablets and mobiles) */
+@media (max-width: 480px) {
+  .containe {
+      margin-left: 0;
   }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input,
-  select,
-  textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  
-  textarea {
-    resize: vertical;
-  }
-  
-  .form-check {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .form-check input {
-    margin-right: 10px;
-  }
-  
-  .button {
-    display: block;
-    width: 100%;
-    padding: 12px 20px;
-    color: #fff;
-    font-weight: 500;
-    text-transform: uppercase;
-    background-color: #ad1a24;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .button:hover {
-    background-color: #ec1c24;
-  }
-  
+}
+
+.title-form {
+  color: #f21826;
+  font-size: 17.6px;
+  font-weight: bold;
+  text-decoration: none solid rgb(255, 255, 255);
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  font-family: var(--tipo-letra);
+  font-weight: bold;
+  color: #333;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+  color: #333;
+  transition: all 0.3s ease;
+  background-color: #ffffff;
+
+}
+
+textarea {
+  font-family: var(--tipo-letra);
+  resize: vertical;
+}
+
+/* input:focus {
+  border-color: #f44336; 
+  outline: 0.5px solid #f44336; 
+} */
+
+
+
+.form-check {
+  display: flex;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.form-check input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+.form-check label {
+  font-family: var(--tipo-letra);
+  font-weight: normal;
+}
+
+.efecto-politicas:hover {
+  color: #aeaeae;
+  text-decoration: underline;
+}
+
+
+/* Estilos para el botón */
+.button {
+  display: inline-block;
+  width: 100%;
+  padding: 12px 20px;
+  position: relative;
+  color: #fff;
+  font-weight: 500;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, #f21826 0, #a3071d);
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-family: var(--tipo-letra);
+  border-radius: 4px;
+}
+
+/* Estilos para el texto normal del botón */
+/* .button:before {
+  content: "Solicitar Información";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.3s ease;
+} */
+
+/* Estilos para el texto del botón en el estado hover */
+.button:hover:before {
+  opacity: 0;
+  /* Esconde el texto normal */
+}
+
+
+.dark-mode-content .title-form {
+  color: #fff;
+}
+
+
+.dark-mode-content label {
+  color: #aeaeae;
+}
