--- a/src/components/navbar/Menu.css
+++ b/src/components/navbar/Menu.css
@@ -4,13 +4,14 @@
   object-fit: cover;
   will-change: filter;
   transition: filter 300ms;
-  width: 150px;
+  width: 180px;
 }
 
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -24,31 +25,34 @@
 
 /* Navbar estilos generales */
 .navbar {
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
   background-color: var(--white-color);
-}
-
-/* Estilos de los enlaces del menú */
-.contenedor{
-  width: 95%;
+  box-shadow: 0px 1px 5px rgb(201, 203, 204);
 }
 
 .navbar-nav li .nav-link {
-  color: var(--azulmarino-color);
+  color: var(--navlink-color);
   transition: all 0.3s ease;
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 16px;
+  font-family: "Inter", sans-serif;
+  font-size: 17px;
   font-stretch: 100%;
   font-style: normal;
 }
 
 .navbar-nav li .nav-link:hover {
-  color: var(--naranja-color);
+  color: red;
+  text-decoration: underline;
 }
+
+.active-link {
+  font-weight: 700;
+}
+
+
 
 /* Navbar con el botón de menú */
 .navbar-toggler {
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 /* Animación para el desplazamiento del menú */
@@ -56,6 +60,7 @@
   from {
     transform: translateX(100%);
   }
+
   to {
     transform: translateX(0);
   }
@@ -65,6 +70,7 @@
   from {
     transform: translateX(-100%);
   }
+
   to {
     transform: translateX(0);
   }
@@ -89,7 +95,8 @@
   background-color: rgba(128, 128, 128, 0.8);
   z-index: 1000;
   display: flex;
-  justify-content: flex-end; /* Alineamos el contenido al lado derecho */
+  justify-content: flex-end;
+  /* Alineamos el contenido al lado derecho */
   align-items: center;
 }
 
@@ -97,56 +104,127 @@
   position: relative;
   background-color: var(--white-color);
   padding: 20px;
-  width: 90%; /* Ajustamos el ancho del menú al 85% del ancho de la pantalla */
+  width: 60%;
   max-width: 400px;
-  height: 100%; /* Ajustamos la altura del menú para que ocupe toda la pantalla */
-  box-shadow: -10px 0 15px rgba(0, 0, 0, 0.2); /* Agregamos una sombra para resaltar el deslizamiento */
+  height: 100%;
+  box-shadow: -10px 0 15px rgba(0, 0, 0, 0.2);
+  animation-duration: 0.3s;
+  /* Duración de la animación */
+  animation-timing-function: ease-out;
+  /* Función de tiempo para un desplazamiento suave */
 }
+
+/* Define las animaciones para abrir y cerrar el menú */
+.menu-transition-enter {
+  opacity: 0;
+  transform: translateX(100%);
+  /* Cambio: de -100% a 100% */
+}
+
+.menu-transition-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 300ms ease-in, transform 300ms ease-in;
+}
+
+.menu-transition-exit {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.menu-transition-exit-active {
+  opacity: 0;
+  transform: translateX(100%);
+  /* Cambio: de -100% a 100% */
+  transition: opacity 300ms ease-out, transform 300ms ease-out;
+}
+
 
 .menu-list {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin-top: 60px;
 }
 
 .menu-list li {
-  margin: 10px 0;
+  margin: 15px 0;
+  text-decoration: none;
 }
 
 .menu-list li a {
-  color: var(--azulmarino-color);
-  font-size: 18px;
+  color: var(--links-color);
+  font-family: var(--tipo-letra);
+  font-size: 16px;
   text-decoration: none;
   transition: color 0.3s;
 }
 
+
+
+.menu-icon {
+  margin-right: 8px; /* Ajusta este valor para el espaciado deseado */
+}
+
 .menu-list li a:hover {
-  color: var(--naranja-color);
+  font-weight: 700;
+  color: var(--black-color);
 }
 
 .menu-close-btn {
   position: absolute;
-  top: 10px;
-  right: 10px; /* Ajustamos la posición a la izquierda */
+  top: 15px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
   background: none;
   border: none;
-  color: var(--azulmarino-color);
-  font-size: 24px;
+  color: var(--black-color);
+  font-size: 35px;
+  line-height: 45px;
+  /* Ajusta esta propiedad para centrar verticalmente el icono */
+  text-align: center;
   cursor: pointer;
+  border-radius: 5px;
+  font-weight: 500;
+}
+
+/* .menu-close-btn:hover {
+  background-color: #f7f4f4;
+} */
+
+.menu-divider {
+  margin: 10px 0;
+  border: 0.5px solid gray;
 }
 
 .menu-darkmode-btn {
-  margin-top: 20px;
+  display: block;
+  text-align: start;
+  border: none !important;
+  background-color: transparent !important;
 }
+
+.darkmode-link {
+  font-size: 16px;
+  font-family: var(--tipo-letra);
+}
+
+
+/* Estilos para el texto de modo oscuro con espaciado */
+.darkmode-text {
+  display: flex;
+  align-items: center;
+  gap: 8px; /* Ajusta este valor para el espaciado deseado */
+  color: var(--links-color);
+  margin: 15px 0;
+  text-decoration: none;
+}
+
 
 /* Estilos para el modo oscuro */
 .navbar-dark {
   background-color: var(--black-color);
-}
-
-.active-link{
-  color: var(--white-color);
-  font-weight: bold;
+  /* box-shadow: 0px 2px 8px rgb(201, 203, 204); */
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -159,12 +237,35 @@
   color: #b5bfba;
 }
 
+.bg-dark{
+  background-color: var(--darkbackground-color) !important;
+}
+
+.bg-dark .menu-list li a{
+  color: var(--white-color);
+}
+
+.bg-dark .menu-list li a:hover{
+  color: #b5bfba;
+}
+
+.bg-dark .menu-close-btn {
+  color: #e5e5e5;
+}
+.bg-dark .darkmode-text{
+  color: var(--white-color);
+}
+
+.bg-dark .menu-divider{
+  border: 0.5px solid #e5e5e5;
+}
 
 /* Add media query for smaller screens (e.g., tablets and mobiles) */
 @media (max-width: 480px) {
   .navbar {
     width: 100%;
   }
+
   .navbar-nav li .nav-link:hover {
     transform: scale(1);
     color: var(--naranja-color);
