--- a/src/pages/contacto/Contacto.css
+++ b/src/pages/contacto/Contacto.css
@@ -1,11 +1,28 @@
+.banner-contacto {
+    background-color: #f21826;
+    color: white !important;
+    padding: 20px;
+}
+
+.banner-contenido {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.texto {
+    flex: 1;
+}
+
 .d-grid-maps {
-    width: 66.6%;
+    width: 65%;
     display: grid;
-    gap: 3rem;
+    gap: 2.5rem;
     grid-template-columns: repeat(2, 1fr);
 }
 
-/* Cambiar el color del texto del tooltip a blanco */
+/* Cambiar el color del texto del tooltip*/
 .leaflet-tooltip {
     color: #ad1a24;
     font-weight: 700;
@@ -30,81 +47,129 @@
 }
 
 .icon-marker,
-.icon-mail {
+.icon-mail,
+.icon-number {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 40px !important;
     height: 40px;
     border-radius: 50%;
-    background-color: #00233f;
     margin-right: 10px;
+}
+
+.bg-marker {
+    background-color: var(--ubicacion-color);
+}
+
+.bg-mail {
+    background-color: var(--meta-color);
+}
+
+.bg-number {
+    background-color: var(--whatsapp-color);
 }
 
 /* Estilos para el texto al lado de los iconos */
 .icon-text {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: var(--tipo-letra);
     margin-left: 10px;
-    /* Espacio entre el ícono y el texto */
     font-size: 16px;
-    color: #484848;
-    /* Color del texto (azul) */
+
 }
+
+.dark-mode-content .icon-text>a {
+    color: #a9b1a6;
+}
+
+.icon-text>a {
+    color: #666666;
+}
+
+
+
 
 .line-container {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 20px;
-  }
-  
-  .line {
+}
+
+.line {
     width: 100%;
-    height: 1.5px;
+    height: 1px;
     background-color: #e8e8e8;
-  }
-  
-  .star-container {
-    padding: 0 10px; /* Ajusta este valor para el espacio entre las líneas y la estrella */
-  }
-  
-  .star {
+}
+
+.star-container {
+    padding: 0 10px;
+}
+
+.star {
     width: 20px;
     height: 20px;
-  }
-  
-
+}
 
 .formulario {
-    width: 33.4%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .whatsapp-button {
-    display: inline-block;
-    background-color: #25d366;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
     text-decoration: none;
-    font-weight: bold;
-    margin-top: 20px;
-  }
+}
+
+.dark-mode-content .banner-contacto {
+    background-color: transparent;
+    text-shadow: 2px 2px 4px rgba(255, 0, 0, 0.6);
+    /* Sombra de color (rojo semitransparente en este ejemplo) */
+}
 
 
-
-
-.dark-mode-content .icon-text{
+.dark-mode-content .icon-text {
     color: #a9b1b7;
 }
 
-.dark-mode-content  .title-dark{
+.dark-mode-content .title-dark {
     color: #fcfdfd;
 }
 
-.dark-mode-content  span{
-    color: #fcfdfd;
+
+/* Add media query for smaller screens (e.g., tablets and mobiles) */
+@media (max-width: 510px) {
+    .d-grid-maps {
+        width: 90% !important;
+        grid-template-columns: repeat(1, 1fr) !important;
+        margin: 0 auto;
+    }
+
+    .d-flex {
+        display: block !important;
+    }
+
+    .formulario {
+        margin-top: 3.5rem;
+        width: 100% !important;
+    }
+}
+
+@media (max-width: 900px) {
+    .d-grid-maps {
+        width: 90% !important;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 auto;
+    }
+
+    .d-flex {
+        display: block !important;
+    }
+
+    .formulario {
+        margin: 3.5rem auto;
+        width: 70% ;
+    }
+
 }
