--- a/src/pages/cursosyprogramas/CursosyProgramas.css
+++ b/src/pages/cursosyprogramas/CursosyProgramas.css
@@ -33,6 +33,23 @@
   font-weight: bold;
 }
 
+.btn-red{
+  font-family: var(--tipo-letra);
+  background-color: #f21826;
+  color: var(--white-color);
+  padding: 12px 16px;
+  font-weight: 600;
+  font-size: 16px;
+  font-style: normal;
+  font-stretch: 100%;
+  line-height: 24px;
+}
+
+.btn-red:hover{
+  background-color: #ec1c24;
+  color: var(--white-color);
+}
+
 /* .programa-overlay {
 
   position: absolute;
@@ -48,4 +65,12 @@
 .programa-overlay p{
   color: rgb(185, 29, 29);
 
+} */
+
+.dark-mode h2{
+color: white !important;
+}
+
+/* .dark-mode .card-subprograma{
+  background-color: transparent !important;
 } */
